# CSCE593

./: README.md
FOXTROT/: README.md
HW1/: HW1.docx  Setup AftrBurnerEngine.pptx  aftr.conf  ~$Setup AftrBurnerEngine.pptx
HW2/: HW2.docx  aftr.conf
HW3/: AbstractGUIFactory.h  BUILD 64 BIT MSVC 2019.bat  Button.cpp  Button.h  CMakeLists.txt  FourPinExternInput.cpp  FourPinExternInput.h  Grading Rubric.txt  HW3 Notes.txt  LinButton.cpp  LinButton.h  LinGUIFactory.cpp  LinGUIFactory.h  LinWindow.cpp  LinWindow.h  WinButton.cpp  WinButton.h  WinGUIFactory.cpp  WinGUIFactory.h  WinWindow.cpp  WinWindow.h  Window.h  diff_linprog_nykl.txt  diff_lintest_nykl.txt  diff_winprog_nykl.txt  diff_wintest_nykl.txt  hw3UML.mdj  main.cpp
Phase1/: Phase 1 UML Report.pptx
Phase2Radar/: Phase 2 Report.pptx  Phase 2.docx  aftr.conf
Phase3Plotting/: Phase 3 Report.pptx  aftr.conf
lec/: 00-Setup GIT.pptx  01-WhatIsSoftwareEngineering.pptx  01HelloWorld.cpp  02-SoftwareLifecycleModels.pptx  03-StaticModelingWithUML.pptx  03LecInherit.cpp  03LecInherit.h  04 - StrategyPattern.pptx  04-ObjectOrientedDesign.pptx  04LecInterface.cpp  04LecStrategy.cpp  04LecStrategyT.cpp  04LecStrategyTransportGoods.cpp  04LecStrategyTransportGoodsT.cpp  05-StatelessDynamicModeling.pptx  05LecMemoryLayout.cpp  05LecObserver.cpp  05LecObserverT.cpp  06-FiniteStatemachinesAndDynamicModeling.pptx  06LambdasClosures.cpp  06ObserverWithCallback.cpp  07-RequirmentsAndUseCaseModeling.pptx  08-SoftwareQualityAttributes.pptx  AbstractFactory_After.cpp  AbstractFactory_Before.cpp  CommandPattern.cpp  CommandPatternMementoShapes.cpp  CommandPatternMementoShapes.h  Constructors.cpp  FacVirCon.cpp  Factory.cpp  Factory_Init.cpp  (+9 more)
(+107 files in other folders)
